# test-templates

./: Cargo.toml  build.rs
src/: main.rs
src/.cargo/: config
src/dex/: Cargo.toml
src/dex/src/: lib.rs
src/faucet/: Cargo.toml
src/faucet/src/: lib.rs
src/flows/: faucet_to_account.json
src/nft-marketplace/: Cargo.toml
src/nft-marketplace/templates/auction/: Cargo.toml
src/nft-marketplace/templates/auction/src/: lib.rs
src/nft-marketplace/templates/index/: Cargo.toml
src/nft-marketplace/tests/: test.rs
src/nft_marketplace/: Cargo.toml
src/nft_marketplace/src/: lib.rs
src/nft_marketplace/tests/: test.rs
src/sparkle_nft/: Cargo.toml
src/sparkle_nft/src/: lib.rs
src/tariswap/: Cargo.toml
src/tariswap/src/: lib.rs
src/tariswap/templates/index/src/: lib.rs
src/tariswap/templates/pool/src/: lib.rs
src/tariswap/tests/: test.rs
tariswap/: Cargo.toml
templates/faucet/: Cargo.toml
templates/faucet/src/: lib.rs
templates/nft-marketplace/templates/auction/src/: lib.rs
templates/nft-marketplace/templates/index/: Cargo.toml
templates/nft-marketplace/templates/index/src/: lib.rs
templates/tariswap/: Cargo.toml
templates/tariswap/templates/index/: Cargo.toml
templates/tariswap/templates/pool/: Cargo.toml
templates/tariswap/tests/: test.rs
wasm/: faucet.wasm  nft_marketplace_auction.wasm  nft_marketplace_index.wasm  tariswap_index.wasm  tariswap_pool.wasm
