[workspace]
[package]
name = "nft_marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
# tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_template_lib = { path = "../../../tari-dan/dan_layer/template_lib" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
# tari_template_test_tooling = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
# tari_transaction = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
# tari_bor = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_template_test_tooling = { path = "../../../tari-dan/dan_layer/template_test_tooling" }
tari_transaction = { path = "../../../tari-dan/dan_layer/transaction" }
tari_bor = { path = "../../../tari-dan/dan_layer/tari_bor" }

[profile.release]
opt-level = 's'     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic.
strip = "debuginfo" # Strip debug info.

[lib]
crate-type = ["cdylib", "lib"]