[workspace]
[package]
name = "tariswap"
version = "0.1.0"
edition = "2021"

[dependencies]
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
tari_template_test_tooling = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_transaction = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_bor = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }